fix the LHS menu misalignment

--- a/trunk/src/WebContent/sys/css/v02/global_v2.css
+++ b/trunk/src/WebContent/sys/css/v02/global_v2.css
@@ -84,7 +84,7 @@ input.button2:hover {
 h1 { font-size:36px; font-weight:bold; padding:20px 0; }
 #container { width:1100px; margin:0 auto; clear:both; }
 #leftCol { width:220px; background:#000; float:left; }
-#leftCol ul { padding:20px; margin:0; }
+#leftCol ul { padding:10px; margin:0; }
 #leftCol ul li { color:#fff; list-style:inside; }
 #leftCol ul li a { color:#fff;}
 #leftCol ul#info { background:#ddd; }
